--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
-    "vuetify": "^1.2.4"
+    "vuetify": "^1.2.4",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
@@ -28,7 +30,5 @@
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
   }
 }
