--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "babel-eslint": "^8.2.1",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^4.0.0"
   }
 }
