--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "precommit": "npm run lint",
     "heroku-postbuild": "npm run build"
   },
-  "engines" : {
+  "engines": {
     "node": "~10.11.0",
-    "npm" : "~6.4.1"
+    "npm": "~6.4.1"
   },
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
-    "vuetify": "^1.2.4",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vuetify": "^1.2.6"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
     "babel-eslint": "^8.2.1",
-    "eslint": "^5.0.1",
+    "eslint": "^5.6.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "nodemon": "^1.11.0"
   }
 }
